<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--region Header-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="137dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_detikcom" />

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/cdv_photo"
        app:layout_constraintTop_toTopOf="@+id/img_logo"
        app:srcCompat="@drawable/ic_search" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cdv_photo"
        android:layout_width="36dp"
        app:cardCornerRadius="50dp"
        android:layout_marginEnd="16dp"
        android:layout_height="36dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_logo">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/img_photo"
            android:layout_marginRight="16dp" />
    </androidx.cardview.widget.CardView>
    <!--endregion-->
    <!--region Menu Top-->
    <LinearLayout
        android:id="@+id/lay_MenuTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        android:layout_marginLeft="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_terbaru"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_beritautama"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_antarkansemangat"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/menu_mostpopular"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="7dp" />

    </LinearLayout>

    <!--endregion-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_MenuTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cdv_newsheadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_news0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/var_contesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_news1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimaryDark"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvw_TitleHeadLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/var_contedesc"
                        android:text="Judul Headline"
                        android:textColor="@android:color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvw_DescHeadLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/var_contdesc"
                        android:text="Deskripsi Headline"
                        android:textColor="#EDEDED"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_daftarberita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="140dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cdv_newsheadline" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>